# clamav-osquery

./: README.md  config.json
extension_clamav/: CMakeLists.txt
extension_clamav/src/: clamav-types.h  clamav.cpp
